--- a/plugins/fast-syntax-highlighting/themes/default.ini
+++ b/plugins/fast-syntax-highlighting/themes/default.ini
@@ -6,28 +6,43 @@ unknown-token    = red,bold
 commandseparator = none
 redirection      = none
 here-string-tri  = yellow
-here-string-word = bg:blue
+here-string-text = bg:blue
+here-string-var  = cyan,bg:blue
 exec-descriptor  = yellow,bold
 comment          = black,bold
 correct-subtle   = bg:blue
 incorrect-subtle = red
 subtle-bg        = bg:blue
 secondary        =
+; recursive-base   =
 
 [command-point]
 reserved-word  = yellow
+subcommand     = yellow
 alias          = green
 suffix-alias   = green
+global-alias   = bg:blue
 builtin        = green
 function       = green
 command        = green
 precommand     = green
 hashed-command = green
+single-sq-bracket = green
+double-sq-bracket = green
+double-paren   = yellow
 
 [paths]
 path          = magenta
 pathseparator = 
+path-to-dir   = magenta,underline
 globbing      = blue,bold
+globbing-ext  = blue,bold
+
+[brackets]
+paired-bracket = bg:blue
+bracket-level-1 = green,bold
+bracket-level-2 = yellow,bold
+bracket-level-3 = cyan,bold
 
 [arguments]
 single-hyphen-option   = cyan
