theme: herestring fixes

--- a/plugins/lily.ini
+++ b/plugins/lily.ini
@@ -6,8 +6,8 @@ unknown-token    = 9
 commandseparator = none
 redirection      = none
 here-string-tri  = yellow
-here-string-text = 18
-here-string-var  = 7,bg:18
+here-string-text = yellow,bg:18
+here-string-var  = 113,bg:18
 exec-descriptor  = 11
 comment          = 8
 correct-subtle   = 12
